# career-atlas

./: README.md  credentials.template.yml  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml
conf/base/parameters/: cv_extraction.yml  scraping.yml  skill_graph.yml  skill_map.yml
src/career_atlas/: __init__.py  __main__.py  canonicalize.py  datasets.py  hooks.py  scraping.py  settings.py  skill_map.py
src/career_atlas/clients/: jobspy_wrapper.py
src/career_atlas/llm/: __init__.py  client.py  prompts.py
src/career_atlas/pipelines/cv_extraction/: __init__.py  nodes.py  pipeline.py
src/career_atlas/pipelines/scraping/: __init__.py  pipeline.py
src/career_atlas/pipelines/skill_map/: __init__.py  nodes.py  pipeline.py
src/career_atlas/web/: __init__.py  app.py  runner.py
src/career_atlas/web/static/: app.js  index.html  style.css
src/job_universe/: __init__.py  __main__.py  canonicalize.py  datasets.py  hooks.py  schemas.py  scraping.py  settings.py  skill_graph.py
src/job_universe/clients/: adzuna.py
src/job_universe/llm/: __init__.py  client.py  prompts.py
src/job_universe/pipelines/cv_extraction/: __init__.py  nodes.py
src/job_universe/pipelines/scraping/: __init__.py  nodes.py  pipeline.py
src/job_universe/pipelines/skill_graph/: __init__.py  nodes.py  pipeline.py
src/job_universe/web/: __init__.py  app.py  progress.py  runner.py
src/job_universe/web/static/: app.js  index.html  style.css
tests/: test_adzuna_ratelimit.py  test_canonicalize.py  test_cv_extraction_nodes.py  test_dedup.py  test_normalization.py  test_ollama_client.py  test_posting_skill_extraction.py  test_progress_emitter.py  test_schemas.py  test_scraping.py  test_skill_graph_build.py  test_skill_graph_viz.py  test_skill_map_build.py  test_skill_map_viz.py  test_web_app.py
tests/fixtures/cv/: sample_cv.md
tests/fixtures/llm/: posting_skills_response.json  query_derivation_response.json  skill_extraction_response.json
