[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "career_atlas"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.4.0",
    "kedro-datasets[pandas-parquetdataset,pandas-csvdataset,text-textdataset,json-jsondataset,matplotlib-matplotlibdataset]>=3.0",
    "pydantic>=2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "python-jobspy>=1.1.79",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "kedro-viz>=12.3.0",
    "sentence-transformers>=3.0",
    "einops>=0.8",
    "scikit-learn>=1.5",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
career-atlas = "career_atlas.__main__:main"
career-atlas-ui = "career_atlas.web.app:run"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
    "time-machine>=2.13",
    "respx>=0.21",
]

[tool.setuptools.dynamic.version]
attr = "career_atlas.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "career_atlas"
project_name = "career-atlas"
kedro_init_version = "1.4.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/career_atlas -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201",
]
ignore = [
    "E501",
]
